--- a/index.html
+++ b/index.html
@@ -284,7 +284,9 @@
           <li><span class="iconify" data-icon="flat-color-icons:linux" data-inline="false" data-width="90px" data-height="90px"></span><span>Linux</span></li>                    
           <li><span class="iconify" data-icon="fontisto:unreal-engine" data-inline="false" data-width="90px" data-height="90px"></span><span>Unreal Engine</span></li>
           <li><span class="iconify" data-icon="logos:blender"data-inline="false" data-width="90px" data-height="90px"></span><span>Blender</span></li>  
-          <li><span class="iconify" data-icon="file-icons:c"data-inline="false" data-width="90px" data-height="90px"></span><span>C++</span></li> 
+          <li><span class="iconify" data-icon="file-icons:c"data-inline="false" data-width="90px" data-height="90px"></span><span>C++</span></li>
+          <li><span class="iconify" data-icon="logos:tailwindcss"data-inline="false" data-width="90px" data-height="90px"></span><span>CSS Tailwind</span></li> 
+
 
         </ul>
       </div>
