--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               Toggle Overlays if you want to see the best looking version of the spaceship.
               
               Animate the "Area" light color, or change some of the ship materials. For example the "red" material, which is pinned to the nodetree.
-            You can get blender file which can be downloaded to see how amazing this spaceship looks once rendered<br> <b>Note:- Renddering this file can take a huge amount of time depending on your PC config it varies.</b> </p>
+            You can get blender file which can be downloaded to see how amazing this spaceship looks once rendered<br> <b>Note:- Rendering this file can take a huge amount of time depending on your PC config it varies.</b> </p>
             <div class="project-links">
               <a href="https://github.com/Ankitkumar72/Blender_Spacship/blob/main/race_spaceship.blend" class="btn-blue-outline btn-small mx-1" target="_blank"> <i class="fab fa-github"></i
                 > File</a>
