--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
           </div>
         </div>
         
-        <form id="contact-form" data-aos="zoom-in" data-aos-delay="300" action="https://formspree.io/f/mjvjylnp" method="POST">
+        <form name="submit-to-google-sheet">
           <h2 class="main-font">Send <span class="text-blue main-font">Email</span></h2>
 
           <div class="form-group">
