--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                 <div class="right"></div>
             </div>
           </button>
-          <div id="status"></div>
+          <span id = "status"></span>
         </form>
       </div>
     </section>
