--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
           <div class="card" data-aos="fade-in">
             <i class="fas fa-envelope"></i>
             <h3>Email</h3>
-            <p>loudpixel73@gmai.com</p>
+            <p>loudpixel73@gmail.com</p>
           </div>
           <div class="card" data-aos="fade-in" data-aos-delay="100">
             <i class="fab fa-github"></i
