--- a/index.html
+++ b/index.html
@@ -286,7 +286,10 @@
           <li><span class="iconify" data-icon="logos:blender"data-inline="false" data-width="90px" data-height="90px"></span><span>Blender</span></li>  
           <li><span class="iconify" data-icon="file-icons:c"data-inline="false" data-width="90px" data-height="90px"></span><span>C++</span></li> 
           <li><span class="iconify" data-icon="logos:tailwindcss"data-inline="false" data-width="90px" data-height="90px"></span><span>CSS Tailwind</span></li>
-          <li><a href="https://www.fiverr.com/loudpixel2?up_rollout=true" class="iconify" data-icon="simple-icons:fiverr"data-inline="false" data-width="90px" data-height="90px">fiverr</a></li> 
+          <li><span class="iconify" data-icon="simple-icons:fiverr"data-inline="false" data-width="90px" data-height="90px"></span><span>fiverr</span></li>
+          <li><span class="iconify" data-icon="logos:figma"data-inline="false" data-width="90px" data-height="90px"></span><span>Figma</span></li>
+                                                                                                                 
+                                                                                                        
 
         </ul>
       </div>
