--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@
           <li><span class="iconify" data-icon="logos:java" data-inline="false" data-width="90px" data-height="90px"></span><span>Java</span></li>
           <li><span class="iconify" data-icon="logos:git-icon" data-inline="false" data-width="90px" data-height="90px"></span><span>Git</span></li>
           <li><span class="iconify" data-icon="logos:mysql" data-inline="false" data-width="90px" data-height="90px"></span><span>MySQL</span></li>
-          <li><span class="iconify" data-icon="flat-color-icons:linux" data-inline="false" data-width="90px" data-height="90px"></span><span>Linux</span></li>                    
+          <li><span class="iconify" data-icon="flat-color-icons:linux" data-inline="false" data-width="90px" data-height="90px"></span><span>Linux</span></li>
+          <li><span class="iconify" data-icon="logos:unity" data-inline="false" data-width="90px" data-height="90px"></span><span>Unity</span></li>                    
           <li><span class="iconify" data-icon="fontisto:unreal-engine" data-inline="false" data-width="90px" data-height="90px"></span><span>Unreal Engine</span></li>
           <li><span class="iconify" data-icon="logos:blender"data-inline="false" data-width="90px" data-height="90px"></span><span>Blender</span></li>  
           <li><span class="iconify" data-icon="file-icons:c"data-inline="false" data-width="90px" data-height="90px"></span><span>C++</span></li> 
