--- a/index.html
+++ b/index.html
@@ -182,8 +182,10 @@
               <p class="text-grey"><b>Made with: </b></p>
               <li><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span></li>
               <li><span class="iconify" data-icon="logos:javascript" data-inline="false"></span></li>
-              <li><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span></li>
-
+              <li><span class="iconify" data-icon="logos:react" data-inline="false"></span></li>
+                                                                                   <li><span class="iconify" data-icon="logos:bootstrap" data-inline="false"></span></li>
+                                                                                   
+                                                                                   
             </ul>
             <p>Architect Website is a just an sample website which was made by me just for learning purpose and tools which I used in making the website were HTML, CSS, JavaScript, and hosting of the website is done on GitHub Pages which hosts my Webiste for free although I don't know JavaScript I followed a GitHub Repository for the best animation results in the website.</p>
             <div class="project-links">
