--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 >
               </li>
               <li>
-                <a href="https://ankitkumar72.github.io/Hackerrank/" class="link"><i class="fab fa-file-certificate"></i> HackerRank</a
+                <a href="https://ankitkumar72.github.io/Hackerrank/" class="link"><i class="fab fa-file-certificate"></i> Certificates </a
                 >
               </li>
               <li>
