--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
                 >
               </li>
               <li>
-                <a href="" class="link"
-                  target="_blank"><i class="fas fa-file"></i> Resume</a
+                <a href="https://github.com/Ankitkumar72/Portfolio/raw/main/Resume.pdf" class="link" target="_blank"><i class="fas fa-file"></i> Resume</a
                 >
               </li>
               <li>
