--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               Hi, I'm <span class="main-font text-blue">Ankit</span>
             </h1>
             <p class="student" id="student">
-              I'm a student of <a href="https://cmrec.ac.in/" class="blue-link-underline" target="_blank">CMR Engineering College</a> Studying in 4th year. 
+              I'm working as an Advisor at <a href="https://cmrec.ac.in/" class="blue-link-underline" target="_blank"> Bet Buy(USA).
             </p>
             <div class="hero-btns">
               <a href="#projects" class="btn-blue"><i class="fas fa-code"></i> Projects</a>
